<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_marginBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="15dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/repos_constraint_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- image Owner -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_image_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <ImageView
                        android:id="@+id/repos_avatar_owner"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/github"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/owner_repo" />
                </androidx.cardview.widget.CardView>

                <GridLayout
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:columnCount="1"
                    android:orientation="vertical"
                    android:padding="3dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@id/card_view_image_owner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    >

                    <TextView
                        android:id="@+id/repos_nom_owner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/default_nom"
                        android:textSize="20sp"
                        android:lines="1"
                        android:textColor="@color/color_owner_name"
                        android:fontFamily="@font/ocean_bold"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="5dp"
                        />

                    <TextView
                        android:id="@+id/repos_nom_repos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/default_repo"
                        android:fontFamily="@font/axilia"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="5dp"
                        android:textSize="17sp"
                        android:lines="1"
                        />
                </GridLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/repos_card_infs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@id/repos_constraint_lay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:rowCount="1"
                    android:columnCount="3">

                    <!-- Issues -->
                    <GridLayout
                        android:id="@+id/gl_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:columnCount="1"
                        android:orientation="vertical"
                        android:padding="10dp"

                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/gl_2"

                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/default_issues"
                            android:textSize="23sp"
                            android:textColor="@color/color_owner_name"
                            android:fontFamily="sans-serif-condensed"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:textAlignment="center"
                            />

                        <TextView
                            android:id="@+id/repos_issues"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/default_nombre"
                            android:fontFamily="@font/axilia"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:textSize="17sp"
                            android:textAlignment="center"
                            />
                    </GridLayout>
                    <!-- Commits -->
                    <GridLayout
                        android:id="@+id/gl_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:columnCount="1"
                        android:orientation="vertical"
                        android:padding="5dp"

                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/gl_1"
                        app:layout_constraintEnd_toStartOf="@id/gl_3"

                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/default_commits"
                            android:textSize="23sp"
                            android:textColor="@color/color_owner_name"
                            android:fontFamily="sans-serif-condensed"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:textAlignment="center"
                            />

                        <TextView
                            android:id="@+id/repos_commits"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/default_nombre"
                            android:fontFamily="@font/axilia"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:textSize="15sp"
                            android:textAlignment="center"
                            />
                    </GridLayout>
                    <!-- Language -->
                    <GridLayout
                        android:id="@+id/gl_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:columnCount="1"
                        android:orientation="vertical"
                        android:padding="5dp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/gl_2"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/default_language"
                            android:textSize="23sp"
                            android:textColor="@color/color_owner_name"
                            android:fontFamily="sans-serif-condensed"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:textAlignment="center"
                            />

                        <TextView
                            android:id="@+id/repos_language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/default_java"
                            android:fontFamily="@font/axilia"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:textSize="15sp"
                            android:lines="1"
                            android:textAlignment="center"
                            />
                    </GridLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>